--- a/myproject/architecture/templates/architecture/index.html
+++ b/myproject/architecture/templates/architecture/index.html
@@ -1,32 +1,34 @@
 {% extends 'base.html' %}
-{% block extrahead %}
+{% block scripts %}
+{% load static %}
     <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
     <link rel="stylesheet" type="text/css" href="/static/admin/css/base.css" />
     <link rel="stylesheet" type="text/css" href="/static/admin/css/dashboard.css" />
     <link rel="stylesheet" type="text/css" href="/static/admin/css/responsive.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="{% static 'js/map.js' %}"></script>
 {% endblock %}
+
 {% block title %}
 Index
 {% endblock %}
+
 {% block content %}
 
 <!-- Container -->
 <div id="container" style="width: 100%;">
-    <!-- Header -->
+    <!-- optional filtering  in Header -->
     <div id="header" class="container" style="background-color: black;">
-{#    <button href="#" id="map_add_points" class="btn btn-dark" style="float: left;">Show all projects</button>#}
-{#    <button href="#" id="map_choosen_points" class="btn btn-dark" style="float: left;">Show only verified projects</button>#}
+    {# <button href="#" id="map_add_points" class="btn btn-dark" style="float: left;">Show all projects</button> #}
+    {# <button href="#" id="map_choosen_points" class="btn btn-dark" style="float: left;">Show only verified projects</button> #}
     </div>
-
     <!-- END Header -->
 
-    <!-- Content -->
+    <!-- Map Content -->
     <div style="align: center;">
         {% for object in data_points %}
-            <div id="map_datapoints" data-longitude="{{ object.longitude }}" data-latitude="{{ object.latitude }}"
+            <div class="map_datapoints" data-longitude="{{ object.longitude }}" data-latitude="{{ object.latitude }}"
                  data-id="{{ object.pk }}" data-name="{{ object.name }}" data-likes="{{ object.user_likes.count }}"></div>
             <div id="user-data" data-id="{{ request.user.pk }}"></div>
         {% endfor %}
@@ -41,49 +43,4 @@ Index
     </div>
 </div>
 <!-- END Container -->
-
-
-<script>
-    var circles = [];
-    var markers = [];
-	var mymap = L.map('mapid').setView([52.233,21], 13);
-
-	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-		maxZoom: 18,
-		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
-			'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-		id: 'mapbox.streets'
-	}).addTo(mymap);
-
-    var my_points = document.querySelectorAll('#map_datapoints');
-    for (var i = 0; i < my_points.length; i++) {
-        var longitude = parseFloat(my_points[i].dataset.longitude);
-        var latitude = parseFloat(my_points[i].dataset.latitude);
-        var adress = "project/" + my_points[i].dataset.id;
-        var name = my_points[i].dataset.name;
-        var marker = L.marker([longitude, latitude]).addTo(mymap);
-        marker.bindPopup(`<a href="${adress}">${name}</a>`);
-    }
-    var popup = L.popup();
-    function onMapClick(e) {
-        var user_id = document.querySelector('#user-data').dataset.id;
-        if (user_id === 'None') {
-            popup
-            .setLatLng(e.latlng)
-            .setContent(`<a href="login"><b>Log in to add projects</a>`)
-            .openOn(mymap);
-        } else {
-            var url_attrs = `lat=${e.latlng.lng}&lon=${e.latlng.lat}&user_id=${user_id}`
-            popup
-            .setLatLng(e.latlng)
-            .setContent(`<a href="project/add?${url_attrs}">Add a project in this location</a>`)
-            .openOn(mymap);
-        }
-    }
-
-
-    mymap.on('click', onMapClick);
-
-</script>
 {% endblock %}
