--- a/myproject/architecture/templates/architecture/about.html
+++ b/myproject/architecture/templates/architecture/about.html
@@ -6,10 +6,6 @@ Login
 {% block content %}
     <br>
     <div class="container my_form_div", style="width: 350px;">
-        <form class="my_padded" method="post">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <button type="submit" class="btn btn-dark">Login</button>
-        </form>
+        about
     </div>
 {% endblock %}
