--- a/myproject/architecture/static/css/cover.css
+++ b/myproject/architecture/static/css/cover.css
@@ -31,8 +31,7 @@ body {
 }
 
 body {
-  display: -ms-flexbox;
-  display: flex;
+
   color: #fff;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
@@ -81,7 +80,7 @@ body {
     float: left;
   }
   .nav-masthead {
-    float: right;
+    float: left;
   }
 }
 
