--- a/myproject/architecture/templates/architecture/register.html
+++ b/myproject/architecture/templates/architecture/register.html
@@ -4,7 +4,8 @@
 Register
 {% endblock %}
 {% block content %}
-    <div class="container my_form_div">
+    <br>
+    <div class="container my_form_div" style="width: 350px;">
     <form class="my_padded" method="post">
         {% csrf_token %}
         {{ form|crispy}}
