--- a/myproject/architecture/static/css/cover.css
+++ b/myproject/architecture/static/css/cover.css
@@ -1,24 +1,22 @@
-/*
+ó /*
  * Globals
  */
-
-/* Links */
+    /* Links */
 a,
 a:focus,
 a:hover {
-  color: #fff;
+    color: #fff;
 }
 
 /* Custom default button */
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff;
+    color: #333;
+    text-shadow: none; /* Prevent inheritance from `body` */
+    background-color: #fff;
+    border: .05rem solid #fff;
 }
-
 
 /*
  * Base structure
@@ -26,94 +24,95 @@ a:hover {
 
 html,
 body {
-  height: 100%;
-  background-color: #000;
+    height: 100%;
+    background-color: #000;
 }
 
 body {
 
-  color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+    color: #fff;
+    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 .cover-container {
-  max-width: 42em;
+    max-width: 42em;
 }
-
 
 /*
  * Header
  */
 .masthead {
-  margin-bottom: 2rem;
+    margin-bottom: 2rem;
 }
 
 .masthead-brand {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .nav-masthead .nav-link {
-  padding: .25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, .5);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
+    padding: .25rem 0;
+    font-weight: 700;
+    color: rgba(255, 255, 255, .5);
+    background-color: transparent;
+    border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+    border-bottom-color: rgba(255, 255, 255, .25);
 }
 
 .nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
+    margin-left: 1rem;
 }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+    color: #fff;
+    border-bottom-color: #fff;
 }
 
 @media (min-width: 48em) {
-  .masthead-brand {
-    float: left;
-  }
-  .nav-masthead {
-    float: left;
-  }
-}
+    .masthead-brand {
+        float: left;
+    }
 
+    .nav-masthead {
+        float: left;
+    }
+}
 
 /*
  * Cover
  */
 .cover {
-  padding: 0 1.5rem;
-}
-.cover .btn-lg {
-  padding: .75rem 1.25rem;
-  font-weight: 700;
+    padding: 0 1.5rem;
 }
 
+.cover .btn-lg {
+    padding: .75rem 1.25rem;
+    font-weight: 700;
+}
 
 /*
  * Footer
  */
 .mastfoot {
-  color: rgba(255, 255, 255, .5);
+    color: rgba(255, 255, 255, .5);
 }
 
 .mydd {
-  font-size: 14px;
+    font-size: 14px;
 }
+
 .my_padded {
-  padding: 8px;
+    padding: 8px;
 }
+
 .container.my_form_div {
-  background-color: #222222;
-  border-radius: 10px;
-  border-style: dashed;
-  border-color: white;
-  border-width: 1px 1px 1px 1px;
+    background-color: #222222;
+    border-radius: 10px;
+    border-style: dashed;
+    border-color: white;
+    border-width: 1px 1px 1px 1px;
 }
